--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "payment_react_native",
+  "name": "server",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@stripe/stripe-react-native": "0.2.3",
-    "axios": "^0.26.0",
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "^11.17.2",
-    "tailwind-rn": "^4.2.0"
+    "express": "^4.17.3",
+    "stripe": "^8.207.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "nodemon": "^2.0.15"
   },
-  "private": true
+  "description": ""
 }
